# Bashasetu_final

./: main.py  main1.py  requirements.txt
Translation/: requirements.txt
Translation/IndicTransToolkit/: CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  setup.py  test.py  test1.py
Translation/IndicTransToolkit/IndicTransToolkit/: __init__.py  collator.py  evaluator.py  processor.c  processor.cp310-win_amd64.pyd  processor.pyx
Translation/IndicTransToolkit/IndicTransToolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tts/: main.py  tts.py
