[build-system]
requires = [
    "setuptools>=68.2.2",
    "wheel",
    "Cython",
]
build-backend = "setuptools.build_meta"

[tool.black]
# Black configuration for code formatting
line-length = 88
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''